# Water-Quality

./: api.py  index.html  ml_controller.py  pyproject.toml
models/: dt(1).joblib  knn(1).joblib  lr(1).joblib  lr.joblib
