[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "water potability"
version = "0.1.0"
description = "ml project"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "0.115.12"
uvicorn = "0.34.2"
pydantic-settings = "2.9.1"
pydantic = "*"
scikit-learn="1.2.2"
scikit-optimize="*"
joblib="*"
xgboost = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"
